kustomize/actual-budget/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual-budget
  labels:
    app.kubernetes.io/name: actual-budget
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: actual-budget
  template:
    metadata:
      labels:
        app.kubernetes.io/name: actual-budget
    spec:
      containers:
        - name: actual-budget
          image: actualbudget/actual-server:23.4.1
          ports:
            - containerPort: 5006
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: actual-budget
