kustomize/actual-budget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-budget
spec:
  selector:
    app.kubernetes.io/name: actual-budget
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
