kustomize/actual-budget/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-budget
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: "budget.chijun.website"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: actual-budget
                port:
                  number: 80
  tls:
    - hosts:
        - "*.chijun.website"
      secretName: wildcard-chijun-website
